--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movelt",
+  "name": "moveit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.2",
+    "js-cookie": "^3.0.1",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.16",
+    "@types/react": "^18.0.19",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0"
+    "eslint-config-next": "12.3.0",
+    "sass": "^1.54.9",
+    "typescript": "^4.8.3"
   }
 }
